--- a/makeuphara-back-end/package.json
+++ b/makeuphara-back-end/package.json
@@ -4,16 +4,20 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
+    "@koa/cors": "2",
+    "bcrypt": "^4.0.1",
     "dotenv": "^8.2.0",
     "eslint-config-prettier": "^6.10.0",
     "esm": "^3.2.25",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.2.1",
-    "koa-passport": "^4.1.3",
     "koa-router": "^8.0.8",
+    "koa-send": "^5.0.0",
     "koa-session": "^5.13.1",
-    "mongoose": "^5.9.5",
-    "passport-google-oauth20": "^2.0.0"
+    "koa-static": "^5.0.0",
+    "mongoose": "^5.9.5"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
