--- a/makeuphara-back-end/package.json
+++ b/makeuphara-back-end/package.json
@@ -17,6 +17,8 @@
     "koa-send": "^5.0.0",
     "koa-session": "^5.13.1",
     "koa-static": "^5.0.0",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.28",
     "mongoose": "^5.9.5"
   },
   "devDependencies": {
