--- a/makeuphara-back-end/package.json
+++ b/makeuphara-back-end/package.json
@@ -19,7 +19,8 @@
     "koa-static": "^5.0.0",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.28",
-    "mongoose": "^5.9.5"
+    "mongoose": "^5.9.5",
+    "sanitize-html": "^1.22.1"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
