--- a/makeuphara-front-end/package.json
+++ b/makeuphara-front-end/package.json
@@ -7,12 +7,14 @@
     "@fortawesome/free-brands-svg-icons": "^5.12.1",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.9",
+    "@loadable/component": "^5.12.0",
     "@material-ui/core": "^4.9.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "immer": "^6.0.2",
+    "qs": "^6.9.3",
     "quill": "^1.3.7",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
