--- a/makeuphara-back-end/package.json
+++ b/makeuphara-back-end/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "@koa/cors": "2",
+    "axios": "^0.19.2",
     "bcrypt": "^4.0.1",
     "dotenv": "^8.2.0",
     "eslint-config-prettier": "^6.10.0",
