--- a/makeuphara-front-end/public/manifest.json
+++ b/makeuphara-front-end/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Make Up HaRa",
+  "name": "Make Up HaRa",
   "icons": [
     {
       "src": "favicon.ico",
