--- a/makeuphara-front-end/package.json
+++ b/makeuphara-front-end/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "dayjs": "^1.8.26",
     "immer": "^6.0.2",
     "qs": "^6.9.3",
     "quill": "^1.3.7",
