--- a/makeuphara-front-end/package.json
+++ b/makeuphara-front-end/package.json
@@ -17,6 +17,7 @@
     "immer": "^6.0.2",
     "qs": "^6.9.3",
     "quill": "^1.3.7",
+    "quill-image-resize-module-react": "^3.0.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-helmet-async": "^1.0.4",
@@ -50,5 +51,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://39.113.253.217:4000"
+  "proxy": "http://localhost:4000"
 }
