--- a/makeuphara-front-end/package.json
+++ b/makeuphara-front-end/package.json
@@ -13,8 +13,8 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
-    "dayjs": "^1.8.26",
     "immer": "^6.0.2",
+    "moment": "^2.27.0",
     "qs": "^6.9.3",
     "quill": "^1.3.7",
     "quill-image-resize-module-react": "^3.0.0",
