--- a/makeuphara-front-end/package.json
+++ b/makeuphara-front-end/package.json
@@ -9,9 +9,9 @@
     "@fortawesome/react-fontawesome": "^0.1.9",
     "@loadable/component": "^5.12.0",
     "@material-ui/core": "^4.9.5",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.5.0",
     "axios": "^0.19.2",
     "immer": "^6.0.2",
     "moment": "^2.27.0",
@@ -33,11 +33,14 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --watchAll",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
@@ -51,5 +54,10 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:4000"
+  "proxy": "http://localhost:4000",
+  "devDependencies": {
+    "@types/redux-mock-store": "^1.0.2",
+    "axios-mock-adapter": "^1.19.0",
+    "redux-mock-store": "^1.5.4"
+  }
 }
