--- a/makeuphara-front-end/.eslintrc
+++ b/makeuphara-front-end/.eslintrc
@@ -5,7 +5,8 @@
     "react/jsx-filename-extension": 0,
     "react/jsx-one-experssion-per-line": 0,
     "no-shadow": 0,
-    "camelcase": 0
+    "camelcase": 0,
+    "func-names": 0
   },
   "env": { "browser": true }
 }
