--- a/makeuphara-front-end/.eslintrc
+++ b/makeuphara-front-end/.eslintrc
@@ -6,7 +6,9 @@
     "react/jsx-one-experssion-per-line": 0,
     "no-shadow": 0,
     "camelcase": 0,
-    "func-names": 0
+    "func-names": 0,
+    "no-param-reassign": 0,
+    "no-underscore-dangle": 0
   },
   "env": { "browser": true }
 }
