fix: refactor components

--- a/makeuphara-front-end/.eslintrc
+++ b/makeuphara-front-end/.eslintrc
@@ -3,7 +3,11 @@
   "rules": {
     "react/prefer-stateless-function": 0,
     "react/jsx-filename-extension": 0,
-    "react/jsx-one-experssion-per-line": 0,
+    "react/jsx-one-expression-per-line": 0,
+    "react/prop-types": 0,
+    "react/jsx-props-no-spreading": 0,
+    "react/no-array-index-key": 0,
+    "react/jsx-wrap-multilines": 0,
     "no-shadow": 0,
     "camelcase": 0,
     "func-names": 0,
