--- a/makeuphara-front-end/.eslintrc
+++ b/makeuphara-front-end/.eslintrc
@@ -8,6 +8,7 @@
     "react/jsx-props-no-spreading": 0,
     "react/no-array-index-key": 0,
     "react/jsx-wrap-multilines": 0,
+    "consistent-return": 0,
     "no-shadow": 0,
     "camelcase": 0,
     "func-names": 0,
