--- a/makeuphara-front-end/.eslintrc
+++ b/makeuphara-front-end/.eslintrc
@@ -13,7 +13,8 @@
     "camelcase": 0,
     "func-names": 0,
     "no-param-reassign": 0,
-    "no-underscore-dangle": 0
+    "no-underscore-dangle": 0,
+    "no-unused-vars": 1
   },
   "env": { "browser": true }
 }
