--- a/makeuphara-front-end/package.json
+++ b/makeuphara-front-end/package.json
@@ -13,8 +13,8 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
     "axios": "^0.21.1",
+    "date-fns": "^2.16.1",
     "immer": "^8.0.1",
-    "moment": "^2.27.0",
     "qs": "^6.9.3",
     "quill": "^1.3.7",
     "quill-image-resize-module-react": "^3.0.0",
