--- a/makeuphara-back-end/package.json
+++ b/makeuphara-back-end/package.json
@@ -8,6 +8,7 @@
     "@koa/cors": "2",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
+    "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
     "eslint-config-prettier": "^6.10.0",
     "esm": "^3.2.25",
@@ -18,8 +19,6 @@
     "koa-send": "^5.0.0",
     "koa-session": "^5.13.1",
     "koa-static": "^5.0.0",
-    "moment": "^2.24.0",
-    "moment-timezone": "^0.5.28",
     "mongoose": "^5.9.5",
     "sanitize-html": "^1.22.1"
   },
