--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       matrix:
         node_version: ['12']
-        os: [macOS-latest]
+        os: [ubuntu-latest]
 
 
     # Steps represent a sequence of tasks that will be executed as part of the job
@@ -29,7 +29,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: yarn install
         working-directory: ./makeuphara-front-end
-        run: yarn install
+        run: yarn install --network-timeout 1000000
       - name: yarn test
         working-directory: ./makeuphara-front-end
         run: yarn test
