--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -32,7 +32,7 @@ jobs:
         run: yarn install
       - name: yarn test
         working-directory: ./makeuphara-front-end
-        run: yarn test --
+        run: yarn test --ci
       - name: failed test
         uses: actions/github-script@v3.1.0
         with:
