--- a/makeuphara-front-end/package.json
+++ b/makeuphara-front-end/package.json
@@ -33,7 +33,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --watchAll",
+    "test": "react-scripts test",
+    "test:watch": "react-scripts test --watchAll",
     "eject": "react-scripts eject"
   },
   "browserslist": {
