--- a/makeuphara-front-end/package.json
+++ b/makeuphara-front-end/package.json
@@ -55,6 +55,7 @@
     "axios-mock-adapter": "^1.19.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^7.0.0",
-    "redux-mock-store": "^1.5.4"
+    "redux-mock-store": "^1.5.4",
+    "redux-saga-test-plan": "^4.0.1"
   }
 }
