--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -6,7 +6,7 @@ name: Testing PR
 on:
   # Triggers the workflow on push or pull request events but only for the develop branch
   pull_request:
-    branches: [ develop ]
+    branches: [ master ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -27,15 +27,13 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      - name: yarn install
-        working-directory: ./makeuphara-front-end
-        run: yarn install
-      - name: yarn test
-        working-directory: ./makeuphara-front-end
+      - name: install package
+        run: yarn --frozen-lockfile
+      - name: testing
         run: yarn test
         env:
           CI: true
-      - name: fail testing
+      - name: review fail testing
         uses: actions/github-script@v3.1.0
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
@@ -45,11 +43,11 @@ jobs:
             await github.pulls.createReview({
               ...context.repo,
               pull_number,
-              body: "테스트가 실패했습니다!",
-              event: "COMMENT"
+              body: "Unit test failed!",
+              event: "REQUEST_CHANGES"
             })
         if: ${{ failure() && github.event_name == 'pull_request' }}
-      - name: success testing
+      - name: review success testing
         uses: actions/github-script@v3.1.0
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
@@ -59,7 +57,7 @@ jobs:
             await github.pulls.createReview({
               ...context.repo,
               pull_number,
-              body: "테스트를 통과했습니다!",
-              event: "COMMENT"
+              body: "Unit test passed!",
+              event: "APPROVE"
             })
         if: ${{ success() && github.event_name == 'pull_request' }}
